[gd_scene load_steps=17 format=2]

[ext_resource path="res://codigo/multiplayer2jogadores/feedback.gd" type="Script" id=1]
[ext_resource path="res://img/tela_feeedback.png" type="Texture" id=2]
[ext_resource path="res://img/feeed_corpo.png" type="Texture" id=3]
[ext_resource path="res://img/feliz_telafeed.png" type="Texture" id=4]
[ext_resource path="res://font/AMPLESOFT MEDIUM.OTF" type="DynamicFontData" id=5]
[ext_resource path="res://img/seguir_2.png" type="Texture" id=6]
[ext_resource path="res://img/seguir_1.png" type="Texture" id=7]
[ext_resource path="res://img/menu_2.png" type="Texture" id=8]
[ext_resource path="res://img/menu_1.png" type="Texture" id=9]
[ext_resource path="res://img/jogarNovamente_1.png" type="Texture" id=10]
[ext_resource path="res://img/jogarNovamente_2.png" type="Texture" id=11]
[ext_resource path="res://img/seta.png" type="Texture" id=12]
[ext_resource path="res://img/contrario_seta.png" type="Texture" id=13]
[ext_resource path="res://img/seta_2.png" type="Texture" id=14]
[ext_resource path="res://img/seta_contraria2.png" type="Texture" id=15]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 5 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="corpo" type="TextureRect" parent="."]
visible = false
margin_left = -6.50708
margin_top = -6.50708
margin_right = 644.493
margin_bottom = 900.493
texture = ExtResource( 3 )

[node name="sentimento" type="TextureRect" parent="."]
margin_left = 71.5779
margin_top = 65.0709
margin_right = 483.578
margin_bottom = 729.071
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="."]
margin_left = 537.0
margin_top = 59.0
margin_right = 1361.0
margin_bottom = 191.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Seguir" type="TextureButton" parent="."]
visible = false
margin_left = 738.554
margin_top = 270.044
margin_right = 1074.55
margin_bottom = 386.044
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )

[node name="Menu" type="TextureButton" parent="."]
margin_left = 660.469
margin_top = 422.961
margin_right = 1161.47
margin_bottom = 538.961
texture_normal = ExtResource( 8 )
texture_hover = ExtResource( 9 )

[node name="jogarNovamente3" type="TextureButton" parent="."]
visible = false
margin_left = 585.638
margin_top = 263.537
margin_right = 1272.64
margin_bottom = 379.537
texture_normal = ExtResource( 10 )
texture_hover = ExtResource( 11 )

[node name="Seguir2" type="TextureButton" parent="."]
visible = false
margin_left = 738.554
margin_top = 270.044
margin_right = 1074.55
margin_bottom = 386.044
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 7 )

[node name="jogador1-casa1" type="TextureRect" parent="."]
visible = false
margin_left = 357.89
margin_top = -16.2677
margin_right = 431.89
margin_bottom = 54.7323
texture = ExtResource( 12 )

[node name="jogador1-casa2" type="TextureRect" parent="."]
visible = false
margin_left = 390.335
margin_top = 319.0
margin_right = 464.335
margin_bottom = 390.0
texture = ExtResource( 12 )

[node name="jogador1-casa3" type="TextureRect" parent="."]
visible = false
margin_left = 202.497
margin_top = 381.793
margin_right = 283.497
margin_bottom = 452.793
texture = ExtResource( 13 )

[node name="jogador1-casa4" type="TextureRect" parent="."]
visible = false
margin_left = 361.495
margin_top = 437.966
margin_right = 435.495
margin_bottom = 508.966
texture = ExtResource( 12 )

[node name="jogador1-casa5" type="TextureRect" parent="."]
visible = false
margin_left = 274.974
margin_top = 448.782
margin_right = 348.974
margin_bottom = 519.782
texture = ExtResource( 12 )

[node name="jogador1-casa6" type="TextureRect" parent="."]
visible = false
margin_left = 145.344
margin_top = 451.796
margin_right = 226.344
margin_bottom = 522.796
texture = ExtResource( 13 )

[node name="jogador1-casa7" type="TextureRect" parent="."]
visible = false
margin_left = 416.664
margin_top = 469.884
margin_right = 490.664
margin_bottom = 540.884
texture = ExtResource( 12 )

[node name="jogador1-casa8" type="TextureRect" parent="."]
visible = false
margin_left = 330.746
margin_top = 578.413
margin_right = 404.746
margin_bottom = 649.413
texture = ExtResource( 12 )

[node name="jogador2-casa1" type="TextureRect" parent="."]
visible = false
margin_left = 257.009
margin_top = 239.689
margin_right = 331.009
margin_bottom = 310.689
texture = ExtResource( 14 )

[node name="jogador2-casa2" type="TextureRect" parent="."]
visible = false
margin_left = 289.454
margin_top = 315.395
margin_right = 363.454
margin_bottom = 386.395
texture = ExtResource( 14 )

[node name="jogador2-casa3" type="TextureRect" parent="."]
visible = false
margin_left = 199.805
margin_top = 394.115
margin_right = 280.805
margin_bottom = 465.115
texture = ExtResource( 15 )

[node name="jogador2-casa4" type="TextureRect" parent="."]
visible = false
margin_left = 365.16
margin_top = 452.386
margin_right = 439.16
margin_bottom = 523.386
texture = ExtResource( 14 )

[node name="jogador2-casa5" type="TextureRect" parent="."]
visible = false
margin_left = 278.639
margin_top = 463.201
margin_right = 352.639
margin_bottom = 534.201
texture = ExtResource( 14 )

[node name="jogador2-casa6" type="TextureRect" parent="."]
visible = false
margin_left = 139.964
margin_top = 464.709
margin_right = 220.964
margin_bottom = 535.709
texture = ExtResource( 15 )

[node name="jogador2-casa7" type="TextureRect" parent="."]
visible = false
margin_left = 420.329
margin_top = 484.304
margin_right = 494.329
margin_bottom = 555.304
texture = ExtResource( 14 )

[node name="jogador2-casa8" type="TextureRect" parent="."]
visible = false
margin_left = 334.411
margin_top = 592.832
margin_right = 408.411
margin_bottom = 663.832
texture = ExtResource( 14 )
[connection signal="pressed" from="Seguir" to="." method="_on_Seguir_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="jogarNovamente3" to="." method="_on_jogarNovamente3_pressed"]
[connection signal="pressed" from="Seguir2" to="." method="_on_Seguir2_pressed"]
